fix: remove deprecated stripNonChar methods and update related tests; improve string handling in tests